Tue Apr 22 16:26:41 UTC 2008  Ciju John  <johnc at ociweb dot com>

        * tests/DCPS/CompatibilityTest/subscriber.cpp:
        * tests/DCPS/LivelinessTimeout/subscriber.cpp:
        * tests/DCPS/UnitTests/LivelinessCompatibility.cpp:
          Fix scoreboard warnings. Get rid of unused vars.

Mon Apr 21 18:19:56 UTC 2008  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/LocalObject.h:

          Fixed a comment that was wrong due to search-and-replace.

        * dds/DCPS/transport/ReliableMulticast/detail/PacketSerializer.h:

	  Added an #include to pick up the defintion of size_t.  Thanks to
          "RTP Techie" <rtp dot techie at gmail dot com> for pointing this out.

Fri Apr 18 16:42:58 UTC 2008  Brian Johnson  <johnson_b@ociweb.com>

        * bin/ProcessFactory.pm:

          Fixed coverage portion to run non-DDS applications correctly.

        * tests/transport/reliable_multicast/reliable_multicast.mpc:

          Added dependency on coverage_optional.mpb feature.

Wed Apr 16 14:40:16 UTC 2008  Brian Johnson  <johnson_b@ociweb.com>

        * MPC/config/coverage_optional.mpb:

          Added to turn on coverage feature.  RT#12130

        * MPC/config/dcps.mpb:
        * dds/DdsDcps.mpc:

          Added inheritance of coverage_optional.mpb.

Wed Apr 16 14:20:40 UTC 2008  Brian Johnson  <johnsonb@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/run_corbaloc_test.pl:
        * DevGuideExamples/DCPS/Messenger/run_ns_test.pl:
        * DevGuideExamples/DCPS/Messenger_ZeroCopy/run_test.pl:
        * bin/auto_run_tests.pl:
        * examples/DCPS/DistributedContent/run_test.pl:
        * examples/DCPS/Messenger_IOGR_Imr/run_test.pl:
        * examples/DCPS/Messenger_Imr/run_test.pl:
        * performance-tests/DCPS/InfoRepo_population/run_test.pl:
        * performance-tests/DCPS/McastListenerTest/run_test-1p1s.pl:
        * performance-tests/DCPS/McastListenerTest/run_test-1p4s.pl: